--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test karma start",
     "build": "webpack",
+    "heroku-postbuild": "cross-env NODE_ENV=production webpack -p --config ./webpack.config.js --progress",
     "dev": "cross-env NODE_ENV=development webpack -w"
   },
   "author": "Andrew Mead",
